Fixing Spacing between Post Decorations Home Page

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -58,7 +58,7 @@ a > {{i['name']}}{
     margin-bottom: 1em;
     display: flex;
     flex-wrap: wrap;
-    gap: .5em;
+    gap: .5em 1.5em;
 }
 
 #clock {
@@ -72,7 +72,6 @@ a > {{i['name']}}{
     padding-right: 10px;
     padding-top: 3px;
     padding-bottom: 3px;
-    margin-right: 1em;
     border-radius: .5em;
     border: 1px solid #ddd;
 }
